# fdshell

./: .gitignore  AGENTS.md  Cargo.toml  LESSONS.md  LICENSE  README.md  STYLE.md  ShortCStr.md  TODO.md  discarders.md  error-handling.md  flake.nix  nextest.toml  package.nix  rust-toolchain.toml
.opencode/agent/: coder.md  qa.md
safe/builtins/: Cargo.toml
safe/builtins/src/: argparse.rs  error.rs  lib.rs  resolve.rs
safe/fdshell/: Cargo.toml  build.rs
unsafe/sys/: Cargo.toml
unsafe/sys/src/: atfd.rs  cmdline.rs  dupfd.rs  env.rs  errno.rs  execveat.rs  exit.rs  exportedfd.rs  fchdir.rs  fchmod.rs  fcntl.rs  fd.rs  fork_pidfd.rs  importedfd.rs  importedfd_error.rs  importedfd_io.rs  importedfd_try.rs  iovec.rs  ipc.rs  lib.rs  localfd.rs  localfd_error.rs  mkdirat.rs  net.rs  openat2.rs  pipe.rs  process.rs  recv_fd_error.rs  renameat.rs  renameat2.rs  rw.rs  shellfd.rs  siginfo.rs  split.rs  stat.rs  syscall_error.rs  syscall_error_from.rs  umask.rs  unlinkat.rs  wait_pidfd.rs
unsafe/sys/src/fork_cell/: error.rs  mod.rs  ref_mut.rs  tests.rs
unsafe/sys/src/importedfd/: mod.rs  rw.rs
unsafe/sys/src/shellfd/: mod.rs  recv_fd.rs  send_fd.rs
unsafe/sys/src/shortcstr/: access.rs  concat.rs  copy.rs  eq.rs  error.rs  fmt.rs  format.rs  from.rs  get.rs  len.rs  mod.rs  parse.rs  push.rs  push_fallback.rs  size.rs  split.rs  traits.rs  verify.rs
unsafe/sys/tests/: execveat.rs  exportedfd.rs  fchdir.rs  fork_cell.rs  importedfd.rs  localfd.rs  pipe.rs  shellfd.rs  shortcstr.rs  siginfo.rs  subprocess.rs  syscall_error.rs  umask.rs  unlinkat.rs
(+171 files in other folders)
